--- a/Coupon/addCoupon.html
+++ b/Coupon/addCoupon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Category</title>
+    <title>Coupon</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -13,9 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Style.css" />
-    <link rel="stylesheet" href="table.css" />
-    <link rel="stylesheet" href="popUpStyle.css" />
-    <link rel="stylesheet" href="addCategory.css" />
+    <link rel="stylesheet" href="../Category/table.css" />
+    <link rel="stylesheet" href="../Category/popUpStyle.css" />
+    <link rel="stylesheet" href="../Category/addCategory.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -114,6 +114,7 @@
           </div>
 
           <!-- dashboard -->
+          <!-- dashboard -->
           <div class="col-10 maindash">
             <div class="maindashboard">
               <!-- banner -->
@@ -142,98 +143,31 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <h2 class="mt-5">Category</h2>
-                <!--  <button >Add</button> -->
-                <div
-                  style="
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                  "
-                >
-                  <div
-                    style="
-                      display: flex;
-                      gap: 5px;
-                      align-items: center;
-                      justify-content: left;
-                    "
-                  >
-                    <i class="fa-solid fa-plus"></i
-                    ><a href="/Category/AddCategory.html">Add</a>
-                  </div>
-                  <div class="searbar">
-                    <input type="text" name="searchbar" id="searchbar" />
-                  </div>
-                </div>
+                <a href="/Coupon/Coupon.html">back</a>
+                <h2 class="mt-5">Add Category</h2>
               </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
               </div>
-              <div class="categoryTable">
-                <table class="styled-table">
-                  <thead>
-                    <tr>
-                      <th>No</th>
-                      <th>Name</th>
-                      <th>Image</th>
-                      <th>Description</th>
-                      <th></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Hunda</td>
-                      <td>M</td>
-                      <td>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Maxime distinctio at officia nihil consequatur
-                        enim ad!
-                      </td>
-                      <td>
-                        <button class="edit-button">
-                          <i class="fa-solid fa-user-pen"></i>
-                        </button>
-                        <button><i class="fa-solid fa-trash"></i></button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+              <div class="addCategory">
+                <form action="#" method="post">
+                  <label for="name">Name:</label>
+                  <input type="text" id="name" name="name" required />
 
-              <div class="popup-overlay" id="editPopup">
-                <div class="popup-container addCategory">
-                  <h2>Edit Item</h2>
-                  <form action="#" method="post">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required />
+                  <label for="image">Validity and Starting:</label>
+                  <input type="text" id="validity" name="validity" required />
 
-                    <label for="image">Image:</label>
-                    <input
-                      type="file"
-                      id="image"
-                      name="image"
-                      accept="image/*"
-                      required
-                    />
+                  <label for="description">Discount Price::</label>
+                  <input
+                    id="discountPrice"
+                    name="discountPrice"
+                    type="number"
+                    required
+                  />
 
-                    <label for="description">Description:</label>
-                    <textarea
-                      id="description"
-                      name="description"
-                      rows="4"
-                      required
-                    ></textarea>
-
-                    <div class="actions">
-                      <button type="submit">Submit</button>
-                      <button class="closebtn" id="closePopup">Close</button>
-                    </div>
-                  </form>
-                  <!-- Add your edit form or content here -->
-                </div>
+                  <button type="submit">Submit</button>
+                </form>
               </div>
             </div>
           </div>
