--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Category</title>
+    <title>Banner</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -13,7 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Style.css" />
-    <link rel="stylesheet" href="addCategory.css" />
+    <link rel="stylesheet" href="../Category/table.css" />
+    <link rel="stylesheet" href="../Category/popUpStyle.css" />
+    <link rel="stylesheet" href="../Category/addCategory.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -157,48 +159,95 @@
                 </div>
               </div>
               <!-- maincontent   -->
-              <div>
-                <a href="/Category/Category.html">back</a>
-                <h2 class="mt-5">Add Category</h2>
+              <div class="container mt-3">
+                <h2>All Banner</h2>
+
+                <div
+                  style="
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                  "
+                >
+                  <button class="btnadd btn-primary mb-3">
+                    <a href="/Banner/addBanner.html">Add Banner</a>
+                  </button>
+                  <form>
+                    <div class="form-group">
+                      <!-- <div class="searbar"> -->
+                      <input
+                        type="text"
+                        name="searchbar"
+                        id="searchbar"
+                        class="form-control"
+                        placeholder="search"
+                      />
+                    </div>
+                  </form>
+                </div>
               </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
               </div>
-              <div class="addCategory">
-                <form action="#" method="post">
-                  <label for="name">Name:</label>
-                  <input type="text" id="name" name="name" required />
+              <div class="categoryTable row mt-3">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Banner Name</th>
+                      <th>Image</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
 
-                  <label for="image">Image:</label>
-                  <input
-                    type="file"
-                    id="image"
-                    name="image"
-                    accept="image/*"
-                    required
-                    onchange="previewImage()"
-                  />
-                  <br />
-                  <div class="imgPreview">
-                    <img
-                      id="imagePreview"
-                      src="#"
-                      alt="Image Preview"
-                      style="display: none; max-width: 200px; max-height: 200px"
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Banner1</td>
+                      <td>
+                        <img
+                          class="image-preview"
+                          src="#"
+                          alt="Image Preview"
+                        />
+                      </td>
+                      <td>
+                        <button class="edit-button" style="border: none">
+                          <i class="fa-solid fa-pen"></i>
+                        </button>
+                        <button style="border: none; color: red">
+                          <i class="fa-solid fa-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <div class="popup-overlay" id="editPopup">
+                <div class="popup-container addCategory">
+                  <h2>Edit Item</h2>
+                  <form action="#" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required />
+
+                    <label for="image">Image:</label>
+                    <input
+                      type="file"
+                      id="image"
+                      name="image"
+                      accept="image/*"
+                      required
                     />
-                  </div>
 
-                  <label for="description">Description:</label>
-                  <textarea
-                    id="description"
-                    name="description"
-                    rows="4"
-                    required
-                  ></textarea>
-
-                  <button type="submit">Submit</button>
-                </form>
+                    <div class="actions">
+                      <button type="submit">Submit</button>
+                      <button class="closebtn" id="closePopup">Close</button>
+                    </div>
+                  </form>
+                  <!-- Add your edit form or content here -->
+                </div>
               </div>
             </div>
           </div>
@@ -208,24 +257,55 @@
     <script src="Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
-      function previewImage() {
-        const input = document.getElementById("image");
-        const preview = document.getElementById("imagePreview");
+      // JavaScript to handle the popup
+      const editButtons = document.querySelectorAll(".edit-button");
+      const editPopup = document.getElementById("editPopup");
+      const closePopupButton = document.getElementById("closePopup");
 
+      // Add click event listeners to each "Edit" button
+      editButtons.forEach((button) => {
+        button.addEventListener("click", () => {
+          editPopup.style.display = "flex";
+        });
+      });
+
+      // Close the popup when the "Close" button is clicked
+      closePopupButton.addEventListener("click", () => {
+        editPopup.style.display = "none";
+      });
+    </script>
+    <script>
+      function previewImage(input) {
+        const previewElement = input.parentNode.querySelector(".image-preview");
         if (input.files && input.files[0]) {
           const reader = new FileReader();
-
           reader.onload = function (e) {
-            preview.style.display = "block";
-            preview.src = e.target.result;
+            previewElement.src = e.target.result;
+            // Store the image data in local storage
+            localStorage.setItem("imagePreview", e.target.result);
           };
-
           reader.readAsDataURL(input.files[0]);
         } else {
-          preview.style.display = "none";
-          preview.src = "";
+          previewElement.src = "#";
+          // Remove the image data from local storage
+          localStorage.removeItem("imagePreview");
         }
       }
+      // Check if there's a stored image preview on page load
+      const storedImagePreview = localStorage.getItem("imagePreview");
+      if (storedImagePreview) {
+        const previewElements = document.querySelectorAll(".image-preview");
+        previewElements.forEach((element) => {
+          element.src = storedImagePreview;
+        });
+      }
     </script>
+    <!-- <script>
+      fetch("../Layout/DashboardSidebar.html")
+        .then((response) => response.text())
+        .then((content) => {
+          document.getElementById("sidebar").innerHTML = content;
+        });
+    </script> -->
   </body>
 </html>
