--- a/Banner/addBanner.html
+++ b/Banner/addBanner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Category</title>
+    <title>Add Banner</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Style.css" />
-    <link rel="stylesheet" href="addCategory.css" />
+    <link rel="stylesheet" href="../Category/addCategory.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -158,8 +158,11 @@
               </div>
               <!-- maincontent   -->
               <div>
-                <a href="/Category/Category.html">back</a>
-                <h2 class="mt-5">Add Category</h2>
+                <button class="btnadd btn-primary mb-3">
+                  <a href="/Banner/Banner.html">back</a>
+                </button>
+                <!-- <a href="/Banner/Banner.html">back</a> -->
+                <h2 class="mt-3">Add Banner</h2>
               </div>
 
               <div class="bars">
@@ -188,14 +191,6 @@
                       style="display: none; max-width: 200px; max-height: 200px"
                     />
                   </div>
-
-                  <label for="description">Description:</label>
-                  <textarea
-                    id="description"
-                    name="description"
-                    rows="4"
-                    required
-                  ></textarea>
 
                   <button type="submit">Submit</button>
                 </form>
