--- a/Coupon/Coupon.html
+++ b/Coupon/Coupon.html
@@ -33,58 +33,76 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <!-- <iframe
-              src="../Layout/DashboardSidebar.html"
-              frameborder="0"
-              scrolling="no"
-              width="250px"
-              height="100%"
-            ></iframe> -->
+                  src="../Layout/DashboardSidebar.html"
+                  frameborder="0"
+                  scrolling="no"
+                  width="250px"
+                  height="100%"
+                ></iframe> -->
             <div class="logo">
               <h4>Management</h4>
             </div>
             <div class="sidebaritems">
               <h3>DASHBOARD</h3>
-              <p>
+              <!-- <p>
                 <span
                   ><i class="fa-solid fa-table-cells"></i>
                   <a href="../Dashboard.html"> Dashboard</a></span
                 >
-              </p>
-              <!-- <p><span><i class="fa-solid fa-bars"></i> Class</span></p> -->
-              <div class="dropdown">
-                <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
-                <button class="dropbtn" onclick="toggleDropdown()">
-                  <i class="fa-solid fa-table-cells"></i
-                  ><a href="../Banner/banner.html">Banner</a>
-                </button>
-                <!-- <div class="dropdown-content" id="classDropdown">
-                                <a href="Manageclass.html">Manage Class</a>
-                                <a href="Managesection.html">Manage Section</a>
-                                <a href="Managesubject.html">Manage Subject</a>
-                            </div> -->
-              </div>
+              </p> -->
               <div class="sidebaritems">
                 <div class="dropdown">
                   <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
                   <button class="dropbtn" onclick="toggleDropdown()">
                     <i class="fa-solid fa-table-cells"></i>
-                    <a href="/Category/Category.html">Category</a>
+                    <a href="../Dashboard.html">Dashboard</a>
+                  </button>
+                </div>
+              </div>
+              <!-- <p><span><i class="fa-solid fa-bars"></i> Class</span></p> -->
+              <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
+              <!-- <div class="dropdown">
+                    <button class="dropbtn" onclick="toggleDropdown()">
+                      <i class="fa-solid fa-table-cells"></i
+                      ><a href="../Banner.html">Banner</a>
+                    </button>
+                  </div> -->
+              <div class="sidebaritems">
+                <div class="dropdown">
+                  <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
+                  <button class="dropbtn" onclick="toggleDropdown()">
+                    <i class="fa-solid fa-flag"></i>
+                    <a href="../Banner/Banner.html">Banner</a>
                   </button>
                   <!-- <div class="dropdown-content" id="classDropdown">
-                                    <a href="#">Manage Student</a>
-                                </div> -->
+                                      <a href="Manageclass.html">Manage Class</a>
+                                      <a href="Managesection.html">Manage Section</a>
+                                      <a href="Managesubject.html">Manage Subject</a>
+                                  </div> -->
                 </div>
               </div>
               <div class="sidebaritems">
                 <div class="dropdown">
                   <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
                   <button class="dropbtn" onclick="toggleDropdown()">
-                    <i class="fa-solid fa-table-cells"></i>
+                    <i class="fa-solid fa-barcode"></i>
+                    <a href="/Category/Category.html">Category</a>
+                  </button>
+                  <!-- <div class="dropdown-content" id="classDropdown">
+                                        <a href="#">Manage Student</a>
+                                    </div> -->
+                </div>
+              </div>
+              <div class="sidebaritems">
+                <div class="dropdown">
+                  <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
+                  <button class="dropbtn" onclick="toggleDropdown()">
+                    <i class="fa-solid fa-ticket"></i>
                     <a href="../Coupon/Coupon.html">Coupon</a>
                   </button>
                   <!-- <div class="dropdown-content" id="classDropdown">
-                                    <a href="#">Manage Teacher</a>
-                                </div> -->
+                                        <a href="#">Manage Teacher</a>
+                                    </div> -->
                 </div>
               </div>
 
@@ -92,7 +110,7 @@
                 <div class="dropdown">
                   <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
                   <button class="dropbtn" onclick="toggleDropdown()">
-                    <i class="fa-solid fa-table-cells"></i>
+                    <i class="fa-solid fa-handshake"></i>
                     <a href="../Transaction/transaction.html">Transactions</a>
                   </button>
                   <div class="dropdown-content" id="classDropdown"></div>
@@ -102,7 +120,7 @@
                 <div class="dropdown">
                   <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
                   <button class="dropbtn" onclick="toggleDropdown()">
-                    <i class="fa-solid fa-table-cells"></i>
+                    <i class="fa-solid fa-user"></i>
                     <a href="../Users/Users.html">Users</a>
                   </button>
                   <div class="dropdown-content" id="classDropdown"></div>
@@ -141,10 +159,11 @@
                 </div>
               </div>
               <!-- maincontent   -->
-              <div>
-                <h2 class="mt-5">Coupon</h2>
+              <div class="container mt-3">
+                <h2>All Coupon</h2>
+                <!-- <h2 class="mt-5"></h2> -->
                 <!-- <button >Add</button> -->
-                <div
+                <!-- <div
                   style="
                     display: flex;
                     gap: 5px;
@@ -154,14 +173,39 @@
                 >
                   <i class="fa-solid fa-plus"></i
                   ><a href="addCoupon.html">Add</a>
+                </div> -->
+
+                <div
+                  style="
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                  "
+                >
+                  <button class="btnadd btn-primary mb-3">
+                    <a href="/Coupon/addCoupon.html">Add Coupon</a>
+                  </button>
+                  <form>
+                    <div class="form-group">
+                      <!-- <div class="searbar"> -->
+                      <input
+                        type="text"
+                        name="searchbar"
+                        id="searchbar"
+                        class="form-control"
+                        placeholder="search"
+                      />
+                    </div>
+                  </form>
                 </div>
               </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
               </div>
-              <div class="categoryTable">
-                <table class="styled-table">
+              <div class="categoryTable row mt-3">
+                <table class="table">
+                  <!-- <table class="styled-table"> -->
                   <thead>
                     <tr>
                       <th>No0</th>
@@ -178,10 +222,12 @@
                       <td>M</td>
                       <td>125</td>
                       <td>
-                        <button class="edit-button">
-                          <i class="fa-solid fa-user-pen"></i>
+                        <button class="edit-button" style="border: none">
+                          <i class="fa-solid fa-pen"></i>
                         </button>
-                        <button><i class="fa-solid fa-trash"></i></button>
+                        <button style="border: none; color: red">
+                          <i class="fa-solid fa-trash"></i>
+                        </button>
                       </td>
                     </tr>
                   </tbody>
