--- a/Users/Users.html
+++ b/Users/Users.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Category</title>
+    <title>Users</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -13,7 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Style.css" />
-    <link rel="stylesheet" href="addCategory.css" />
+    <link rel="stylesheet" href="../Category/table.css" />
+    <link rel="stylesheet" href="../Category/popUpStyle.css" />
+    <link rel="stylesheet" href="../Category/addCategory.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -128,7 +130,6 @@
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
-
           <!-- dashboard -->
           <div class="col-10 maindash">
             <div class="maindashboard">
@@ -157,48 +158,120 @@
                 </div>
               </div>
               <!-- maincontent   -->
-              <div>
-                <a href="/Category/Category.html">back</a>
-                <h2 class="mt-5">Add Category</h2>
+              <div class="container mt-3">
+                <h2>All Users</h2>
+                <!-- <h2 class="mt-5"></h2> -->
+                <!-- <button >Add</button> -->
+                <!-- <div
+                  style="
+                    display: flex;
+                    gap: 5px;
+                    align-items: center;
+                    justify-content: left;
+                  "
+                >
+                  <i class="fa-solid fa-plus"></i
+                  ><a href="addCoupon.html">Add</a>
+                </div> -->
+
+                <!-- add and serach code  -->
+                <!-- <div
+                  style="
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                  "
+                >
+                  <button class="btnadd btn-primary mb-3">
+                    <a href="/Coupon/addCoupon.html">Add Coupon</a>
+                  </button>
+                  <form>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        name="searchbar"
+                        id="searchbar"
+                        class="form-control"
+                        placeholder="search"
+                      />
+                    </div>
+                  </form>
+                </div> -->
               </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
               </div>
-              <div class="addCategory">
-                <form action="#" method="post">
-                  <label for="name">Name:</label>
-                  <input type="text" id="name" name="name" required />
-
-                  <label for="image">Image:</label>
-                  <input
-                    type="file"
-                    id="image"
-                    name="image"
-                    accept="image/*"
-                    required
-                    onchange="previewImage()"
-                  />
-                  <br />
-                  <div class="imgPreview">
-                    <img
-                      id="imagePreview"
-                      src="#"
-                      alt="Image Preview"
-                      style="display: none; max-width: 200px; max-height: 200px"
-                    />
+              <div class="categoryTable row mt-3">
+                <table class="table">
+                  <!-- <table class="styled-table"> -->
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Name</th>
+                      <th>Phone Number</th>
+                      <th>Image</th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Hunda</td>
+                      <td>M</td>
+                      <td>125</td>
+                      <td>
+                        <!-- class="btn btn-primary" -->
+                        <button
+                          data-toggle="modal"
+                          data-target="#exampleModal"
+                          style="border: none; color: red"
+                        >
+                          <i class="fa-solid fa-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <div
+                  class="modal fade"
+                  id="exampleModal"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="exampleModalLabel"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                          Modal title
+                        </h5>
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">...</div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                        <button type="button" class="btn btn-primary">
+                          Save changes
+                        </button>
+                      </div>
+                    </div>
                   </div>
-
-                  <label for="description">Description:</label>
-                  <textarea
-                    id="description"
-                    name="description"
-                    rows="4"
-                    required
-                  ></textarea>
-
-                  <button type="submit">Submit</button>
-                </form>
+                </div>
               </div>
             </div>
           </div>
@@ -208,24 +281,29 @@
     <script src="Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
-      function previewImage() {
-        const input = document.getElementById("image");
-        const preview = document.getElementById("imagePreview");
+      // JavaScript to handle the popup
+      const editButtons = document.querySelectorAll(".edit-button");
+      const editPopup = document.getElementById("editPopup");
+      const closePopupButton = document.getElementById("closePopup");
 
-        if (input.files && input.files[0]) {
-          const reader = new FileReader();
+      // Add click event listeners to each "Edit" button
+      editButtons.forEach((button) => {
+        button.addEventListener("click", () => {
+          editPopup.style.display = "flex";
+        });
+      });
 
-          reader.onload = function (e) {
-            preview.style.display = "block";
-            preview.src = e.target.result;
-          };
-
-          reader.readAsDataURL(input.files[0]);
-        } else {
-          preview.style.display = "none";
-          preview.src = "";
-        }
-      }
+      // Close the popup when the "Close" button is clicked
+      closePopupButton.addEventListener("click", () => {
+        editPopup.style.display = "none";
+      });
     </script>
+    <!-- <script>
+      fetch("../Layout/DashboardSidebar.html")
+        .then((response) => response.text())
+        .then((content) => {
+          document.getElementById("sidebar").innerHTML = content;
+        });
+    </script> -->
   </body>
 </html>
