--- a/Orders/OrderDetail.html
+++ b/Orders/OrderDetail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banner</title>
+    <title>Order Details</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -41,9 +41,8 @@
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
-
           <!-- dashboard -->
-          <div class="col-10 maindash p-5">
+          <div class="col-10 maindash">
             <div class="maindashboard">
               <!-- banner -->
               <div class="row navbar">
@@ -70,95 +69,44 @@
                 </div>
               </div>
               <!-- maincontent   -->
-              <div class=" mt-3">
-                <h2>All Banner</h2>
-
-                <div
-                  style="
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                  "
-                >
-                  <button class="btnadd btn-primary mb-3">
-                    <a href="/Banner/addBanner.html">Add Banner</a>
-                  </button>
-                  <form>
-                    <div class="form-group">
-                      <!-- <div class="searbar"> -->
-                      <input
-                        type="text"
-                        name="searchbar"
-                        id="searchbar"
-                        class="form-control"
-                        placeholder="search"
-                      />
-                    </div>
-                  </form>
+              <div class="container mt-3">
+                <h2>All Orders</h2>
                 </div>
-              </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
               </div>
               <div class="categoryTable row mt-3">
                 <table class="table">
+                  <!-- <table class="styled-table"> -->
                   <thead>
                     <tr>
-                      <th>#</th>
-                      <th>Banner Name</th>
-                      <th>Image</th>
-                      <th>Actions</th>
+                      <th>Order Id</th>
+                      <th>Product Name</th>
+                      <th>Product Order Date</th>
+                      <th>Status</th>
+                      <th></th>
                     </tr>
                   </thead>
-
                   <tbody>
                     <tr>
                       <td>1</td>
-                      <td>Banner1</td>
+                      <td>Hunda</td>
+                      <td>12/5/2012</td>
+                      <td ><span class="badge badge-info" style="background-color: green;">complete</span> </td>
                       <td>
-                        <img
-                          class="image-preview"
-                          src="#"
-                          alt="Image Preview"
-                        />
-                      </td>
-                      <td>
-                        <button class="edit-button" style="border: none">
-                          <i class="fa-solid fa-pen"></i>
-                        </button>
-                        <button style="border: none; color: red">
+                        <!-- class="btn btn-primary" -->
+                        <button
+                          data-toggle="modal"
+                          data-target="#exampleModal"
+                          style="border: none; color: red"
+                        >
                           <i class="fa-solid fa-trash"></i>
                         </button>
                       </td>
                     </tr>
                   </tbody>
                 </table>
-              </div>
-
-              <div class="popup-overlay" id="editPopup">
-                <div class="popup-container addCategory">
-                  <h2>Edit Item</h2>
-                  <form action="#" method="post">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required />
-
-                    <label for="image">Image:</label>
-                    <input
-                      type="file"
-                      id="image"
-                      name="image"
-                      accept="image/*"
-                      required
-                    />
-
-                    <div class="actions">
-                      <button type="submit">Submit</button>
-                      <button class="closebtn" id="closePopup">Close</button>
-                    </div>
-                  </form>
-                  <!-- Add your edit form or content here -->
-                </div>
               </div>
             </div>
           </div>
@@ -184,32 +132,6 @@
       closePopupButton.addEventListener("click", () => {
         editPopup.style.display = "none";
       });
-    </script>
-    <script>
-      function previewImage(input) {
-        const previewElement = input.parentNode.querySelector(".image-preview");
-        if (input.files && input.files[0]) {
-          const reader = new FileReader();
-          reader.onload = function (e) {
-            previewElement.src = e.target.result;
-            // Store the image data in local storage
-            localStorage.setItem("imagePreview", e.target.result);
-          };
-          reader.readAsDataURL(input.files[0]);
-        } else {
-          previewElement.src = "#";
-          // Remove the image data from local storage
-          localStorage.removeItem("imagePreview");
-        }
-      }
-      // Check if there's a stored image preview on page load
-      const storedImagePreview = localStorage.getItem("imagePreview");
-      if (storedImagePreview) {
-        const previewElements = document.querySelectorAll(".image-preview");
-        previewElements.forEach((element) => {
-          element.src = storedImagePreview;
-        });
-      }
     </script>
     <!-- <script>
       fetch("../Layout/DashboardSidebar.html")
