worked on a lot of things

--- a/Banner/Banner.html
+++ b/Banner/Banner.html
@@ -33,17 +33,17 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
 
           <!-- dashboard -->
-          <div class="col-10 maindash p-5">
+          <div class="col-10 maindash ps-4">
             <div class="maindashboard">
               <!-- banner -->
               <div class="row navbar">
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <!-- maincontent   -->
-              <div class=" mt-3">
+              <div class="mt-3">
                 <h2>All Banner</h2>
 
                 <div
