--- a/Coupon/Coupon.html
+++ b/Coupon/Coupon.html
@@ -33,11 +33,11 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
@@ -115,7 +115,7 @@
                 <i class="fa-solid fa-bars"></i>
               </div>
               <div class="categoryTable row mt-3">
-                <table class="table">
+                <table class="table" id="coupon-table-body">
                   <!-- <table class="styled-table"> -->
                   <thead>
                     <tr>
@@ -126,8 +126,8 @@
                       <th></th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
+                  <tbody id="coupon-table">
+                    <!-- <tr>
                       <td>1</td>
                       <td>Hunda</td>
                       <td>M</td>
@@ -140,7 +140,7 @@
                           <i class="fa-solid fa-trash"></i>
                         </button>
                       </td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
               </div>
@@ -148,7 +148,11 @@
               <div class="popup-overlay" id="editPopup">
                 <div class="popup-container addCategory">
                   <h2>Edit Item</h2>
-                  <form action="#" method="post">
+                  <form
+                    action="/handle_form_submission"
+                    method="post"
+                    id="editForm"
+                  >
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required />
 
@@ -176,7 +180,8 @@
         </div>
       </div>
     </div>
-    <script src="Script.js"></script>
+    <script src="../Script.js"></script>
+    <script src="coupon.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       // JavaScript to handle the popup
