--- a/Dashboard.html
+++ b/Dashboard.html
@@ -28,16 +28,16 @@
         <div class="row">
           <div class="col-2 sidebar p-2">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
-                  <!-- width="250px" -->
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
+            <!-- width="250px" -->
             <!-- <div class="logo bold">
               <h3>Management</h3>
               <h3>Dashboard</h3> -->
-              <!-- <h4>DASHBOARD</h4> -->
+            <!-- <h4>DASHBOARD</h4> -->
             <!-- </div> -->
             <!-- <div class="sidebaritems">
               <div class="sidebaritems">
@@ -130,10 +130,10 @@
                   <i class="fa-solid fa-bell"></i>
                 </div>
               </div>
-              <h2 class="mt-5">Welcome - Super Admin</h2>
-              <div class="bars">
+              <h3 class="mt-5">Welcome - Super Admin</h3>
+              <!-- <div class="bars">
                 <i class="fa-solid fa-bars"></i>
-              </div>
+              </div> -->
               <!-- <div class="col-3 col-t-6 col-p-12">
                 <div class="admin_box ">
                   <h4>Customers</h4>
@@ -142,28 +142,27 @@
                 </div>
               </div> -->
 
-
               <!-- <div class="container-fluid  no-gutters w-100">
 
                 <div class="mt-5 w-full d-flex align-items-center justify-content-space-between no-gutters ">
                   <div class="card col-4 col-t-6 col-p-12">
                     <div class="card-body  d-flex flex-column justify-content-center">
                       <h3 class="card-title">Customers</h3>
-                      <h1 class="card-text mt-5 blue">262</h1>
+                      <h2 class="card-text mt-5 blue">262</h2>
                       <p class="card-text">Total Customers</p>
                     </div>
                   </div>
                   <div class="card col-4 col-t-6 col-p-12">
                     <div class="card-body  d-flex flex-column justify-content-center">
                       <h3 class="card-title">Sales</h3>
-                      <h1 class="card-text mt-5 blue">2</h1>
+                      <h2 class="card-text mt-5 blue">2</h2>
                       <p class="card-text">Total Sales</p>
                     </div>
                   </div>
                   <div class="card col-4 col-t-6 col-p-12">
                     <div class="card-body  d-flex flex-column justify-content-center">
                       <h3 class="card-title">Profits</h3>
-                      <h1 class="card-text mt-5 blue">262</h1>
+                      <h2 class="card-text mt-5 blue">262</h2>
                       <p class="card-text">Total Profits</p>
                     </div>
                   </div>
@@ -173,34 +172,39 @@
                 <div class="row mt-5">
                   <div class="col-sm-12 col-md-4">
                     <div class="card">
-                      <div class="card-body d-flex flex-column justify-content-center">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                      >
                         <h3 class="card-title">Customers</h3>
-                        <h1 class="card-text mt-5 blue">262</h1>
+                        <h2 class="card-text mt-3 blue">262</h2>
                         <p class="card-text">Total Customers</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-4">
                     <div class="card">
-                      <div class="card-body d-flex flex-column justify-content-center">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                      >
                         <h3 class="card-title">Sales</h3>
-                        <h1 class="card-text mt-5 blue">2</h1>
+                        <h2 class="card-text mt-3 blue">2</h2>
                         <p class="card-text">Total Sales</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-4">
                     <div class="card">
-                      <div class="card-body d-flex flex-column justify-content-center">
+                      <div
+                        class="card-body d-flex flex-column justify-content-center"
+                      >
                         <h3 class="card-title">Profits</h3>
-                        <h1 class="card-text mt-5 blue">262</h1>
+                        <h2 class="card-text mt-3 blue">262</h2>
                         <p class="card-text">Total Profits</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
