--- a/Orders/OrderDetail.html
+++ b/Orders/OrderDetail.html
@@ -33,11 +33,11 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
@@ -71,7 +71,7 @@
               <!-- maincontent   -->
               <div class="container mt-3">
                 <h2>All Orders</h2>
-                </div>
+              </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
@@ -88,24 +88,7 @@
                       <th></th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Hunda</td>
-                      <td>12/5/2012</td>
-                      <td ><span class="badge badge-info" style="background-color: green;">complete</span> </td>
-                      <td>
-                        <!-- class="btn btn-primary" -->
-                        <button
-                          data-toggle="modal"
-                          data-target="#exampleModal"
-                          style="border: none; color: red"
-                        >
-                          <i class="fa-solid fa-trash"></i>
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
+                  <tbody id="table-body"></tbody>
                 </table>
               </div>
             </div>
@@ -113,7 +96,8 @@
         </div>
       </div>
     </div>
-    <script src="Script.js"></script>
+    <script src="../Script.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       // JavaScript to handle the popup
