--- a/Users/Users.html
+++ b/Users/Users.html
@@ -33,11 +33,11 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
@@ -114,7 +114,7 @@
                 <i class="fa-solid fa-bars"></i>
               </div>
               <div class="categoryTable row mt-3">
-                <table class="table">
+                <table class="table" id="user-table">
                   <!-- <table class="styled-table"> -->
                   <thead>
                     <tr>
@@ -125,14 +125,13 @@
                       <th></th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
+                  <tbody id="user-table-body">
+                    <!-- <tr>
                       <td>1</td>
                       <td>Hunda</td>
                       <td>M</td>
                       <td>125</td>
                       <td>
-                        <!-- class="btn btn-primary" -->
                         <button
                           data-toggle="modal"
                           data-target="#exampleModal"
@@ -141,7 +140,7 @@
                           <i class="fa-solid fa-trash"></i>
                         </button>
                       </td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
                 <div
@@ -189,7 +188,8 @@
         </div>
       </div>
     </div>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
+    <script src="../Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       // JavaScript to handle the popup
