--- a/Users/Users.html
+++ b/Users/Users.html
@@ -71,50 +71,13 @@
               <!-- maincontent   -->
               <div class="container mt-3">
                 <h2>All Users</h2>
-                <!-- <h2 class="mt-5"></h2> -->
-                <!-- <button >Add</button> -->
-                <!-- <div
-                  style="
-                    display: flex;
-                    gap: 5px;
-                    align-items: center;
-                    justify-content: left;
-                  "
-                >
-                  <i class="fa-solid fa-plus"></i
-                  ><a href="addCoupon.html">Add</a>
-                </div> -->
-
-                <!-- add and serach code  -->
-                <!-- <div
-                  style="
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                  "
-                >
-                  <button class="btnadd btn-primary mb-3">
-                    <a href="/Coupon/addCoupon.html">Add Coupon</a>
-                  </button>
-                  <form>
-                    <div class="form-group">
-                      <input
-                        type="text"
-                        name="searchbar"
-                        id="searchbar"
-                        class="form-control"
-                        placeholder="search"
-                      />
-                    </div>
-                  </form>
-                </div> -->
               </div>
 
               <div class="bars">
                 <i class="fa-solid fa-bars"></i>
               </div>
-              <div class="categoryTable row mt-3">
-                <table class="table">
+              <div class="categoryTable row mt-3 ps-4">
+                <table class="styled-table">
                   <!-- <table class="styled-table"> -->
                   <thead>
                     <tr>
