worked on integrating apis

--- a/Banner.html
+++ b/Banner.html
@@ -170,6 +170,7 @@
                         <tr>
                           <th>#</th>
                           <th>Banner Name</th>
+                          <th>Description</th>
                           <th>Image</th>
                           <th>Actions</th>
                         </tr>
