--- a/SubCategory/addSubCategory.html
+++ b/SubCategory/addSubCategory.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Banner</title>
+    <title>Add Sub Category</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -70,10 +70,10 @@
               <!-- maincontent   -->
               <div>
                 <button class="btnadd btn-primary mb-3">
-                  <a href="/Banner/Banner.html">back</a>
+                  <a href="/SubCategory/subCategory.html">back</a>
                 </button>
                 <!-- <a href="/Banner/Banner.html">back</a> -->
-                <h2 class="mt-3">Add Banner</h2>
+                <h2 class="mt-3">Add Sub Category</h2>
               </div>
 
               <div class="bars">
@@ -84,7 +84,7 @@
                   <label for="name">Name:</label>
                   <input type="text" id="name" name="name" required />
                   <label for="description">Description:</label>
-                  <textarea type="text" id="description" name="description" required cols="4"></textarea>
+                  <textarea type="text" id="description" name="description" cols="4"></textarea>
 
                   <label for="image">Image:</label>
                   <input
@@ -114,6 +114,7 @@
       </div>
     </div>
     <script src="Script.js"></script>
+    <script src="../SubCategory/subCategory.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       function previewImage() {
@@ -148,7 +149,7 @@
         formData.append("image", image);
 
         try {
-            const response = await fetch("https://api.bhattacharjeesolution.in/book/api/add-banner.php", {
+            const response = await fetch("http://localhost:80/BookSellingAPI/api/sub-category/add.php", {
                 method: "POST",
                 body: formData,
             });
