--- a/SubCategory/subCategory.html
+++ b/SubCategory/subCategory.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banner</title>
+    <title>Sub Category</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -71,7 +71,7 @@
               </div>
               <!-- maincontent   -->
               <div class="mt-3">
-                <h2>All Banner</h2>
+                <h2>All Sub Category</h2>
 
                 <div
                   style="
@@ -81,7 +81,7 @@
                   "
                 >
                   <button class="btnadd btn-primary mb-3">
-                    <a href="/Banner/addBanner.html">Add Banner</a>
+                    <a href="/SubCategory/addSubCategory.html">Add Sub Category</a>
                   </button>
                   <form>
                     <div class="form-group">
@@ -106,7 +106,7 @@
                   <thead>
                     <tr>
                       <th>#</th>
-                      <th>Banner Name</th>
+                      <th>Name</th>
                       <th>Description</th>
                       <th>Image</th>
                       <th>Actions</th>
@@ -158,7 +158,7 @@
       </div>
     </div>
     <script src="../Script.js"></script>
-    <script src="banner.js"></script>
+    <script src="subCategory.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       var fileInput = document.getElementById("fileInput");
