--- a/Banner/addBanner.html
+++ b/Banner/addBanner.html
@@ -31,11 +31,11 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
@@ -84,7 +84,13 @@
                   <label for="name">Name:</label>
                   <input type="text" id="name" name="name" required />
                   <label for="description">Description:</label>
-                  <textarea type="text" id="description" name="description" required cols="4"></textarea>
+                  <textarea
+                    type="text"
+                    id="description"
+                    name="description"
+                    required
+                    cols="4"
+                  ></textarea>
 
                   <label for="image">Image:</label>
                   <input
@@ -134,37 +140,47 @@
           preview.src = "";
         }
       }
-    
+
       async function submitForm(event) {
+        const token = localStorage.getItem("user");
         event.preventDefault();
-        console.log('inside');
+        console.log("inside");
         const name = document.getElementById("name").value;
         const description = document.getElementById("description").value;
         const image = document.getElementById("image").files[0];
-
+        console.log(name);
         const formData = new FormData();
         formData.append("name", name);
         formData.append("description", description);
         formData.append("image", image);
 
         try {
-            const response = await fetch("https://api.bhattacharjeesolution.in/book/api/add-banner.php", {
-                method: "POST",
-                body: formData,
-            });
-
-            if (response.ok) {
-                // Handle success (e.g., display a success message)
-                console.log("Form submitted successfully!");
-                window.location.href = 'banner.html';
-            } else {
-                // Handle error (e.g., display an error message)
-                console.error("Form submission failed!");
+          const response = await fetch(
+            "https://api.bhattacharjeesolution.in/book/api/add-banner.php",
+            {
+              method: "POST",
+              body: formData,
+              headers: {
+                // "Content-Type": "application/json",
+                token: token,
+              },
             }
+          );
+
+          if (response.ok) {
+            const data = await response.json();
+            console.log(data);
+            // Handle success (e.g., display a success message)
+            console.log("Form submitted successfully!");
+            window.location.href = "banner.html";
+          } else {
+            // Handle error (e.g., display an error message)
+            console.error("Form submission failed!");
+          }
         } catch (error) {
-            console.error("An error occurred:", error);
+          console.error("An error occurred:", error);
         }
-    }
+      }
     </script>
   </body>
 </html>
